transaction-generator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: transaction-generator
  labels:
    app: office-space
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: office-space
        tier: transaction
    spec:
      containers:
        - image: timrodocker/transaction-generator-office-space:v1
          name: transaction-generator
          ports:
            - containerPort: 8080
