account-database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-database
  labels:
    app: office-space
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: office-space
    tier: database
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-database
  labels:
    app: office-space
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: office-space
        tier: database
    spec:
      containers:
        - image: mysql:5.6
          name: account-database
          ports:
            - containerPort: 3306
              name: db
