account-summary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-summary
  labels:
    app: office-space
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
  selector:
    app: office-space
    tier: summary
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-summary
  labels:
    app: office-space
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: office-space
        tier: summary
    spec:
      containers:
        - image: timrodocker/account-summary:v2
          imagePullPolicy: Always
          name: account-summary
          ports:
            - containerPort: 80
              name: web
