compute-interest-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: compute-interest-api
  labels:
    app: office-space
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: office-space
    tier: compute
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: compute-interest-api
  labels:
    app: office-space
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: office-space
        tier: compute
    spec:
      containers:
        - image: timrodocker/compute-interest-api:v2
          imagePullPolicy: Always
          name: compute-interest-api
          ports:
            - containerPort: 8080
