os-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: office-space
spec:
  podSelector:
    matchLabels:
      app: office-space-mysql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: office-space
    ports:
    - protocol: TCP
      port: 3306
